added the ability for other OPEN APIS

--- a/cmanager/credential.html
+++ b/cmanager/credential.html
@@ -47,6 +47,7 @@
                     <option value="" disabled selected>Choose Credential Type</option>
                     <option value="General OPEN APIs">General OPEN APIs</option>
                     <option value="Fast Purge APIs">Fast Purge APIs</option>
+                    <option value="Other OPEN APIs">Other OPEN APIs</option>
                   </select>
                   <label>Credential Type</label>
                 </div>
