--- a/popup.html
+++ b/popup.html
@@ -160,6 +160,8 @@
 
 <main>
 
+  <!--notification-->
+    <div id="notification"></div>
 
   <div id="testing" class="col l12">
       <div class="container">
@@ -206,11 +208,23 @@
                         <label for="openapiendpoint">Enter API endpoint you wish to test</label>
                       </div>  
                     </div>                
-  
+                    <div class="col s6">
+                        <div class="input-field">
+                            <textarea id="addheadersname" placeholder="Luna-Token" class="materialize-textarea"></textarea>
+                            <label for="addheadersname">Add Header Name (Optional)</label>
+                        </div> 
+                     </div>
+                     <div class="col s6">
+                        <div class="input-field">
+                            <textarea id="addheadersvalue" placeholder="default-121424" class="materialize-textarea"></textarea>
+                            <label for="addheadersvalue">Add Header Value (Optional)</label>
+                        </div> 
+                     </div>
+
                       <div class="col s12">
                       <div class="input-field">
                           <textarea id="addpostbody" placeholder="{a:b}" class="materialize-textarea"></textarea>
-                          <label for="addpostbody">Add POST data</label>
+                          <label for="addpostbody">Add POST data (Optional)</label>
                       </div> 
                       <a id="openapitester-submitButton" href="#!" class="btn light-blue hoverable submit-button" style="width: 20%;">SUBMIT</a>  
                       <p style="padding-bottom:10px; padding-top:10px;"><i>Need more capability? <a href="#!" id="feedbackformlink" class="orange-text">click here </a> to request them</i></p>                      
