Refreshing DataTables when new requests are created

--- a/openapitester/openapitester-history.html
+++ b/openapitester/openapitester-history.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/fonts/materialicons.css"  type="text/css">
     <link rel="stylesheet" type="text/css" href="/css/jquery.dataTables.css">
     <style>
-      select[name='purge-table_length'] {
+      select[name='openapi-table_length'] {
         width: auto !important;
         color: unset !important;
       }
