Adding content to be ready for master

--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Akamai Developer Toolkit v1.0</title>
+    <title>Akamai Developer Toolkit v2.0</title>
     <link type="text/css" rel="stylesheet" href="css/materialize.css" media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -67,7 +67,7 @@
                 </div>
               </li>
               <!--<li class="white"><a href="#adminops" id="loadtour" class="waves-effect waves-blue"><i class="material-icons">language</i>Guided tour to setup APIs<span class="new badge right yellow darken-3"></span></a></li>-->
-              <li class="white"><a href="#" class="waves-effect waves-blue"><i class="material-icons">web</i>User Guide</a></li>
+              <li class="white"><a href="#" class="userguide waves-effect waves-blue"><i class="material-icons">web</i>User Guide</a></li>
          
 
            <!-- <li class="white">
