committing recent improvements

--- a/popup.html
+++ b/popup.html
@@ -183,7 +183,7 @@
                 <div class="row">
                   <div class="col s7">
                     <span class="card-title black-text">OPEN API Tester
-                      <a href="#!" id="openapitutorial" class="tooltipped" data-position="bottom" data-tooltip="Video tutorial on how to use this section">
+                      <a href="#!" id="openapitutorial" class="tooltipped" data-position="bottom" data-tooltip="Coming Soon: Video tutorial on how to use this section">
                         <i class="material-icons blue-grey-text text-darken-2 tutorial-video-icon">play_circle_outline</i>
                       </a>
                     </span>
@@ -380,7 +380,7 @@
               <div class="row">
                 <div class="col s10">
                   <span class="card-title black-text">Debug Requests
-                    <a href="#!" id="debugtutorial" class="tooltipped" data-position="bottom" data-tooltip="Video tutorial on how to use this section">
+                    <a href="#!" id="debugtutorial" class="tooltipped" data-position="bottom" data-tooltip="Coming Soon: Video tutorial on how to use this section">
                       <i class="material-icons blue-grey-text text-darken-2 tutorial-video-icon">play_circle_outline</i>
                     </a>
                   </span>
@@ -437,7 +437,7 @@
                         <div class="row">
                           <div class="col s5">
                             <span class="card-title black-text">Browser Settings
-                              <a href="#!" id="browsersettingstutorial" class="tooltipped" data-position="bottom" data-tooltip="Video tutorial on how to use this section">
+                              <a href="#!" id="browsersettingstutorial" class="tooltipped" data-position="bottom" data-tooltip="Coming Soon: Video tutorial on how to use this section">
                                 <i class="material-icons blue-grey-text text-darken-2 tutorial-video-icon">play_circle_outline</i>
                               </a>
                             </span>
@@ -489,7 +489,7 @@
                 <div class="card hoverable">
                     <div class="card-content black-text apimanager">
                       <span class="card-title black-text">API Credentials Manager
-                        <a href="#!" id="apicredstutorial" class="tooltipped" data-position="bottom" data-tooltip="Video tutorial on how to use this section">
+                        <a href="#!" id="apicredstutorial" class="tooltipped" data-position="bottom" data-tooltip="Coming Soon: Video tutorial on how to use this section">
                           <i class="material-icons blue-grey-text text-darken-2 tutorial-video-icon">play_circle_outline</i>
                         </a>
                       </span>
@@ -514,7 +514,7 @@
                 <div class="row" style="margin-bottom: 55px;">
                   <div class="col s6">
                     <span class="card-title black-text">Fast Purge
-                      <a href="#!" id="fastpurgetutorial" class="tooltipped" data-position="bottom" data-tooltip="Video tutorial on how to use this section">
+                      <a href="#!" id="fastpurgetutorial" class="tooltipped" data-position="bottom" data-tooltip="Coming Soon: Video tutorial on how to use this section">
                         <i class="material-icons blue-grey-text text-darken-2 tutorial-video-icon">play_circle_outline</i>
                       </a>
                     </span>
@@ -617,7 +617,7 @@
                                 <div class="card white hoverable grey lighten-1">
                                   <div class="card-content black-text">
                                     <span class="card-title black-text">Developer Points of Presence 
-                                      <a href="#!" id="devpopstutorial" class="tooltipped" data-position="bottom" data-tooltip="video tutorial on how to use this section">
+                                      <a href="#!" id="devpopstutorial" class="tooltipped" data-position="bottom" data-tooltip="Coming Soon: video tutorial on how to use this section">
                                         <i class="material-icons blue-grey-text text-darken-2 tutorial-video-icon">play_circle_outline</i>
                                       </a>
                                     </span>
