--- a/popup.html
+++ b/popup.html
@@ -207,6 +207,7 @@
                             <!--<option value="" disabled selected>Method</option>-->
                             <option value="GET" selected>GET</option>
                             <option value="POST">POST</option>
+                            <option value="PUT">PUT</option>
                             <option value="DELETE">DELETE</option>
                           </select>
                     </div>  
