renaming OPEN API to Akamai API

--- a/popup.html
+++ b/popup.html
@@ -49,7 +49,7 @@
             <li class="sidenav-header orange">
               <div class="row" style="margin-bottom: 0px;">
                 <div class="col s12 center-align">
-              <h5 class="white-text">OPEN API Credential List</h5>
+              <h5 class="white-text">Akamai API Credential List</h5>
                 </div>
               </div>
             </li>
@@ -94,7 +94,7 @@
                     <a class="collapsible-header waves-effect waves-blue"><i class="material-icons">folder_special</i>Video Tutorials<span class="new badge right grey" data-badge-caption="Upcoming"></span><i class="material-icons right" style="margin-right:0;">arrow_drop_down</i></a>
                     <div class="collapsible-body">
                       <ul>
-                        <li><a class="waves-effect waves-blue" href="#">How to use OPEN API Tester</a></li>
+                        <li><a class="waves-effect waves-blue" href="#">How to use Akamai API Tester</a></li>
                         <li><a class="waves-effect waves-blue" href="#">Developer Points of Presence</a></li>
                         <li><a class="waves-effect waves-blue" href="#">Brotli Comparision Tool</a></li>
                         <li><a class="waves-effect waves-blue" href="#">How to add a new API token</a></li>
@@ -155,7 +155,7 @@
                 <li class="tab"><a class="active" href="#adminops">Admin Operations</a></li>
                 <li class="tab"><a href="#analysis">Site Analysis</a></li>
                 <li class="tab"><a href="#upcoming">Upcoming Features</a></li>
-                <li class="tab" id="tour_open_api"><a href="#testing">OPEN API Tester</a></li>
+                <li class="tab" id="tour_open_api"><a href="#testing">Akamai API Tester</a></li>
               </ul>
             </div>
 
@@ -182,20 +182,20 @@
               <div class="card-content black-text">
                 <div class="row">
                   <div class="col s7">
-                    <span class="card-title black-text">OPEN API Tester
+                    <span class="card-title black-text">Akamai API Tester
                       <a href="#!" id="openapitutorial" class="tooltipped" data-position="bottom" data-tooltip="Coming Soon: Video tutorial on how to use this section">
                         <i class="material-icons blue-grey-text text-darken-2 tutorial-video-icon">play_circle_outline</i>
                       </a>
                     </span>
                   </div>
                   <div class="col s5 right-align">
-                      <a id='sidenavbutton' class="btn blue-grey lighten-5 hoverable tooltipped blue-grey-text text-darken-3" data-position="bottom" data-tooltip="Click here to switch active tokens">Switch OPEN API credentials</a>
+                      <a id='sidenavbutton' class="btn blue-grey lighten-5 hoverable tooltipped blue-grey-text text-darken-3" data-position="bottom" data-tooltip="Click here to switch active tokens">Switch Akamai API credentials</a>
                     <a id='openapitesterhistorydetails' class="btn blue-grey lighten-5 hoverable tooltipped blue-grey-text text-darken-3" data-position="bottom" data-tooltip="Click here to view the results of your latest request">History</a>
                   </div>
                 </div>
                 <div class="row">
                   <div class="col s12">
-                    <span>Enter your OPEN API endpoint and select the method you want to call</span>
+                    <span>Enter your Akamai API endpoint and select the method you want to call</span>
                   </div>
                 </div>
                 <div class="row">
@@ -325,7 +325,7 @@
         
                       <div class="row">
                           <div class="col s8">
-                              <span class="card-title">OPEN API History</span>
+                              <span class="card-title">Akamai API History</span>
                           </div>
 
 
@@ -342,7 +342,7 @@
                             <tr>
                               <th class="no-sort"></th>
                               <th>Time(GMT)</th>
-                              <th>OPEN API Cred</th>
+                              <th>Akamai API Cred</th>
                               <th>HTTP Method</th>
                               <th>API Endpoint Requested</th>
                               <th>Response Status</th>
