Updating extension to support multiple headers

--- a/popup.html
+++ b/popup.html
@@ -221,14 +221,14 @@
                     </div>                
                     <div class="col s6">
                         <div class="input-field">
-                            <textarea id="addheadersname" placeholder="Luna-Token" class="materialize-textarea"></textarea>
-                            <label for="addheadersname">Add Header Name (Optional)</label>
+                            <textarea id="addheadersname" placeholder="Accept&#10;Content-Type" class="materialize-textarea"></textarea>
+                            <label for="addheadersname">Add Header Name (Optional), enter multiple header names separated by a new line </label>
                         </div> 
                      </div>
                      <div class="col s6">
                         <div class="input-field">
-                            <textarea id="addheadersvalue" placeholder="default-121424" class="materialize-textarea"></textarea>
-                            <label for="addheadersvalue">Add Header Value (Optional)</label>
+                            <textarea id="addheadersvalue" placeholder="application/vnd.akamai.cps.enrollment.v1+json&#10;application/vnd.akamai.cps.enrollment.v4+json" class="materialize-textarea"></textarea>
+                            <label for="addheadersvalue">Add Header Value (Optional), enter multiple header values separated by a new line</label>
                         </div> 
                      </div>
 
