--- a/popup.html
+++ b/popup.html
@@ -473,7 +473,7 @@
                             <a id="flushdns" href="#!" class="btn blue-grey lighten-5 hoverable tooltipped blue-grey-text text-darken-3" data-position="bottom" data-tooltip="Flushes your browser's DNS cache">Flush DNS</a>
                           </div>
                         </div>
-                        <div class="row">
+                       <!-- <div class="row">
                           <div class="col s12">
                             <h6>Proxy Configurations</h6>
                             <span>Manage your browser's proxy settings by either selecting a pre-existing configuration or proceed by creating one</span>
@@ -486,6 +486,7 @@
                             <div class="padding-top">Note: Currently only HTTP requests work. HTTPs connections will fail due to chrome's proxy API implementation, if you do know how to resovle them please do let us know by clicking on the feedback button on top of this plugin.</div>
                           </div>
                         </div>
+                      -->
                       </div>
                     </div>
             </div>
