Updated extension with Akamai Video Manager

--- a/popup.html
+++ b/popup.html
@@ -581,7 +581,7 @@
                           <!--   <i class="material&#45;icons blue&#45;grey&#45;text text&#45;darken&#45;2">play_circle_outline</i> -->
                           <!-- </a> -->
                         </span>
-                        <p>Piez displays optimizations made by Akamai Image Manager, Resource Optimizer, Push/Preconnect and Script Manager. Once you make a selection below, please proceed to open up Chrome Dev Tools and select "Akamai Dev Tools - Piez"</p>
+                        <p>Piez displays optimizations made by Akamai Image Manager, Video Manager, Resource Optimizer, Push/Preconnect and Script Manager. Once you make a selection below, please proceed to open up Chrome Dev Tools and select "Akamai Dev Tools - Piez"</p>
                         <div id="piez-notification"></div>
                       </div>
                     </div>
@@ -632,7 +632,7 @@
                                 </div>
                                 <div class="card white hoverable grey lighten-1">
                                   <div class="card-content black-text">
-                                    <span class="card-title black-text">Developer Points of Presence 
+                                    <span class="card-title black-text">Akamai Sandboxes 
                                       <a href="#!" id="devpopstutorial" class="tooltipped" data-position="bottom" data-tooltip="Coming Soon: video tutorial on how to use this section">
                                         <i class="material-icons blue-grey-text text-darken-2 tutorial-video-icon">play_circle_outline</i>
                                       </a>
