latest update based on feedback

--- a/popup.html
+++ b/popup.html
@@ -229,7 +229,7 @@
 
                   <div class="col s10">
                       <div class="input-field">
-                        <textarea id="openapiendpoint"  placeholder="/devpops-api/v1/sandbox"  class="materialize-textarea"></textarea>
+                        <textarea id="openapiendpoint"  placeholder="/sandbox-api/v1/sandbox"  class="materialize-textarea"></textarea>
                         <label for="openapiendpoint">Enter API endpoint you wish to test</label>
                       </div>  
                     </div>                
