Moved label to header to match the rest of the UI

--- a/popup.html
+++ b/popup.html
@@ -609,9 +609,9 @@
                             </div>
                         </div>
                         <div class="col s12">
+                            <span><h6>List of URLs to inject with headers for Piez</h6></span>
                             <div class="input-field">
                                 <textarea id="piez-urls" class="materialize-textarea" placeholder="www.akamai.com,test.example.com,www.example.co.uk"></textarea>
-                                <label for="purgeurls">List of URLs to inject with headers for Piez</label>
                             </div>
                         </div>
                     </div>
